--- a/css/master.css
+++ b/css/master.css
@@ -34,6 +34,10 @@ footer{
 width: 128px;
 height: 128px;
 }
+.edc_tab video{
+  border-radius: 3px;
+
+}
 a{
   text-decoration: none;
   color: #0B090D;
@@ -157,6 +161,10 @@ h3{
   padding-right: 3px;
   grid-column-gap: 5px;
 }
+.item_4{
+  text-align: center;
+  font-weight: bold;
+}
 .edc_grid p{
   margin: 0;
 }
@@ -166,6 +174,7 @@ h3{
 
 .edc_tab{
   background-color: rgba(217, 213, 210, 0.80);
+  padding: 3px;
 }
 .section_DIA{
   background-image: url(AutomationEngineer.jpg);
@@ -232,10 +241,38 @@ img{
   background-attachment: fixed;
   border-radius: 3px;
 }
-/* .test{
-  width: 10%;
-  height: 10%;
-  background: red;
-  position: fixed;
-  left: 45%;
-} */
+@media screen and (min-width: 820px) and (min-height: 1750px) {
+
+  .edc_grid{
+    grid-template-columns: none;
+  }
+  .edc_caption{
+    display: none;
+  }
+  .item_1{
+    text-align: center;
+    font-weight: bold;
+  }
+  .item_3{
+    padding-top: 10px;
+  }
+  main{
+    max-width: 95%;
+    font-size: 1vw;
+  }
+  .btn_sm{
+    font-size: 2vw;
+  }
+  header{
+    max-width: 97%;
+  }
+  nav{
+    font-size: 2vw;
+  }
+  footer{
+    font-size: 0.5vw;
+    max-width: 95%;
+    margin: auto;
+  }
+
+}
